--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.0",
     "tar": "^6.1.11",
     "web-vitals": "^2.1.2"
@@ -44,9 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^6.2.1"
   },
   "description": "<h1>Nomos Glashutte Project</h1>",
   "main": "index.js",
